<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Armor">

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/skull"
            android:id="@+id/startCharacterSheet"
            android:background="#000000"
            android:padding="1dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="92dp"
            android:layout_marginStart="92dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="104dp"/>

    <TextView
            android:id="@+id/text_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"

            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />
    <TableLayout
            android:layout_width="345dp"
            android:layout_height="666dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="@+id/text_dashboard"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintVertical_bias="0.23000002" android:id="@+id/tableLayout2">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">


        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/pluss" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/headValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/headValue" android:textSize="30sp"
                    android:layout_margin="10dp"/>
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/minus" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/head" android:textSize="30sp"
                    android:fontFamily="casual" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" android:layout_marginBottom="10dp"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/checkBox2" android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" android:visibility="invisible"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/checkBox7" android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/pluss" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/armsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/armsValue" android:textSize="30sp"
                    android:layout_margin="10dp"/>
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/minus" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/arms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/arms" android:textSize="30sp"
                    android:fontFamily="casual" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" android:layout_marginBottom="10dp"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/checkBox3" android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/checkBox8" android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/pluss" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/bodyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/bodyValue" android:textSize="30sp"
                    android:layout_margin="10dp"/>
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/minus" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/body" android:textSize="30sp"
                    android:fontFamily="casual" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" android:layout_marginBottom="10dp"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/checkBox5" android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/checkBox10" android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/pluss" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/waistValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/waistValue" android:textSize="30sp"
                    android:layout_margin="10dp"/>
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/minus" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/waist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/waist" android:textSize="30sp"
                    android:fontFamily="casual" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" android:layout_marginBottom="10dp"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/checkBox6" android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/checkBox11" android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/pluss" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/legsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/legsValue" android:textSize="30sp"
                    android:layout_margin="10dp"/>
            <ImageView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/minus" android:layout_gravity="center"/>
            <TextView
                    android:text="@string/legs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/legs" android:textSize="30sp"
                    android:fontFamily="casual" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp" android:layout_marginBottom="10dp"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/checkBox4" android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/checkBox9" android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp" android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
        </TableRow>


    </TableLayout>

    <Button
            android:text="@string/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/resetButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="72dp" android:layout_marginStart="72dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="80dp"/>
    <Button
            android:text="@string/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/saveButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="72dp" android:layout_marginRight="72dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="80dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>