<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".AttributeFragment" android:id="@+id/attributeFrame">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AttributeFragment">

        <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tableLayout3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/saveButton2"
                android:layout_marginBottom="8dp">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/movement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/movement"
                        android:textSize="30sp"
                        android:fontFamily="casual"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                />
                <EditText

                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:id="@+id/movementValue"
                        android:textSize="30sp"
                        android:maxLength="2"
                        android:hint="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"
                        android:layout_width="48dp" android:gravity="center"/>
                <CheckBox
                        android:id="@+id/movementCB1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"/>
                <CheckBox
                        android:id="@+id/movementCB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" android:paddingTop="10dp"/>
            </TableRow>

            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent">
                <TextView
                        android:text="@string/accuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/accuracy"
                        android:textSize="30sp"
                        android:fontFamily="casual"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:id="@+id/accuracyValue"
                        android:textSize="30sp"
                        android:maxLength="2"
                        android:hint="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                />
                <CheckBox
                        android:id="@+id/accuracyCB1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"/>
                <CheckBox
                        android:id="@+id/accuracyCB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"/>
            </TableRow>

            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent">
                <TextView
                        android:text="@string/strength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/strength"
                        android:textSize="30sp"
                        android:fontFamily="casual"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:id="@+id/strengthValue"
                        android:textSize="30sp"
                        android:maxLength="2"
                        android:hint="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                />
                <CheckBox
                        android:id="@+id/strengthCB1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"
                />
                <CheckBox
                        android:id="@+id/strengthCB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"
                />
            </TableRow>

            <TableRow android:layout_width="match_parent"
                      android:layout_height="match_parent">
                <TextView
                        android:text="@string/evasion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/evasion"
                        android:textSize="30sp"
                        android:fontFamily="casual"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:id="@+id/evasionValue"
                        android:textSize="30sp"
                        android:maxLength="2"
                        android:hint="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                />
                <CheckBox
                        android:id="@+id/evasionCB1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"/>
                <CheckBox
                        android:id="@+id/evasionCB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"
                />
            </TableRow>

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/luck"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/luck"
                        android:textSize="30sp"
                        android:fontFamily="casual"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:id="@+id/luckValue"
                        android:textSize="30sp"
                        android:maxLength="2"
                        android:hint="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                />
                <CheckBox
                        android:id="@+id/luckCB1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"/>
                <CheckBox
                        android:id="@+id/luckCB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"

                />
            </TableRow>

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView
                        android:text="@string/speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/speed"
                        android:textSize="30sp"
                        android:fontFamily="casual"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                <EditText
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:id="@+id/speedValue"
                        android:textSize="30sp"
                        android:maxLength="2"
                        android:hint="0"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textColor="#000000"
                        android:layout_width="wrap_content"
                        android:gravity="center"
                />
                <CheckBox
                        android:id="@+id/speedCB1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"/>
                <CheckBox
                        android:id="@+id/speedCB2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:layout_marginLeft="10dp"
                />
            </TableRow>


        </TableLayout>

        <Button
                android:text="@string/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resetButton2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="48dp"/>
        <Button
                android:text="@string/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveButton2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="48dp"
        />
        <TextView
                android:text="Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.611"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tableLayout3"/>
        <TextView
                android:text="FA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.276"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tableLayout3"/>
        <TextView
                android:text="Token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.194"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tableLayout3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>